--- a/themes/pharm_theme/scss/page/_faq.scss
+++ b/themes/pharm_theme/scss/page/_faq.scss
@@ -256,3 +256,23 @@
     }
   }
 }
+.wc-faq-header {
+  //margin-bottom: 100px;
+  padding: 20px;
+}
+
+.wc-faq__title {
+  font-size: 30px;
+  font-weight: bold;
+  color: #222222;
+  margin-bottom: 30px;
+}
+
+.wc-faq__item__titile {
+  font-size: 18px;
+  font-weight: bold;
+  color: #222222;
+  background: url(/themes/pharm_theme/images/arrow-down.png) no-repeat;
+  background-size: 15px auto;
+  background-position: 100% 30%;
+}
